# octofetch

./: Cargo.toml  README.md  deny.toml  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/: cli.rs  config.rs  main.rs  utils.rs
src/display/: card.rs  compare.rs  mod.rs  profile.rs  repo.rs
src/github/: api.rs  cache.rs  mod.rs  models.rs
src/theme/: mod.rs
